--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "es6",
+    "module": "CommonJS",
     "outDir": "out",
     "sourceMap": true
   },
