--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "es6",
-    "module": "CommonJS",
+    "module": "es6",
     "outDir": "out",
     "sourceMap": true,
     "preserveConstEnums": true
